// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover demo renders always demo correctly 1`] = `
<div class="vs-popover">
  <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">always<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
  <div data-transfer="false" class="vs-popover-popper v-transfer-dom" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders basic demo correctly 1`] = `
<div class="vs-popover">
  <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
  <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders container demo correctly 1`] = `
<div class="container">
  <div style="height: 500px;">
    <div class="vs-popover">
      <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
      <div data-transfer="false" class="vs-popover-popper v-transfer-dom" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
        <div class="vs-popover-arrow"></div>
        <div class="vs-popover-inner" style="max-width: none;">
          <h3 class="vs-popover-title">This is a tooltip.</h3>
          <div class="vs-popover-content">
            <p>This is a default Popover</p>
            <p>Content</p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders delay demo correctly 1`] = `
<div class="vs-popover">
  <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">click delay 1s<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
  <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders full demo correctly 1`] = `
<div class="vs-popover">
  <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
  <div data-transfer="false" class="vs-popover-popper vs-popover-popper-full v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders inline demo correctly 1`] = `
<div>
  <div x-placement="auto-start" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="auto" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="auto-end" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="top-start" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="top" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="top-end" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="right-start" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="right" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="right-end" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="bottom-end" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="bottom" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="bottom-start" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="left-end" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="left" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
  <div x-placement="left-start" class="vs-popover-popper vs-popover-popper-inline" style="margin: 10px;">
    <div class="vs-popover-arrow"></div>
    <div class="vs-popover-inner" style="max-width: none;">
      <h3 class="vs-popover-title">This is a tooltip.</h3>
      <div class="vs-popover-content">
        <p>This is a default Popover</p>
        <p>Content</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders placement demo correctly 1`] = `
<div>
  <table cellspacing="5">
    <tbody>
      <tr>
        <td></td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">bottom-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">bottom<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">bottom-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td></td>
      </tr>
      <tr>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">right-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">left-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">right<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">left<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">right-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">left-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td></td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">top-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">top<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-popover" style="margin: 10px;">
            <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">top-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
            <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-popover-arrow"></div>
              <div class="vs-popover-inner" style="max-width: none;">
                <h3 class="vs-popover-title">This is a tooltip.</h3>
                <div class="vs-popover-content">
                  <p>This is a default Popover</p>
                  <p>Content</p>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td></td>
      </tr>
    </tbody>
  </table>
  <hr>
  <div class="vs-popover" style="margin: 10px;">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">auto<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">This is a tooltip.</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <hr>
  <div class="vs-popover" style="margin: 10px;">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">auto-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">This is a tooltip.</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <hr>
  <div class="vs-popover" style="margin: 10px;">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">auto-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">This is a tooltip.</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo renders trigger demo correctly 1`] = `
<div role="toolbar" class="vs-btn-toolbar">
  <div class="vs-popover">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">Title</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <div class="vs-popover">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">right-click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">Title</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <div class="vs-popover">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">hover<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">Title</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <div class="vs-popover">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">focus<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">Title</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
  <div class="vs-popover">
    <div class="vs-popover-rel"><button type="button" class="vs-btn vs-btn-default">active<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> </div>
    <div data-transfer="false" class="vs-popover-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-popover-arrow"></div>
      <div class="vs-popover-inner" style="max-width: none;">
        <h3 class="vs-popover-title">Title</h3>
        <div class="vs-popover-content">
          <p>This is a default Popover</p>
          <p>Content</p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
